# atomic-term-symbol-calculator

./: README.md  pyproject.toml  terms.py
tests/: test_terms.py
